--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             </div>
             <h1 id="main-heading">Cough Detector App <i class="fa-solid fa-head-side-cough"></i></h1>
             <span class="subtitle">Record an audio clip to detect the presence of coughing.</span>
-            <button id="toggle-record" onclick="toggleRecording()">
+            <button id="toggle-record">
                 <i class="fa-solid fa-play"></i>
             </button>
             <p id="recording-status">Awaiting first audio input...</p>
